welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:1: error: not found: type int
def estAdo(a:int):Boolean = {
             ^loneTeen:9: error: value &&! is not a member of Boolean
  if((estAdo(a)&&!estAdo(b))|| (!estAdo(a)&&estAdo(b)))  {
               ^